# QA_06

./: Lesson 2.py  Lesson_1.py  Lesson_3.py  Lesson_5.py  README.md  conftest.py  pyproject.toml  test_lesson_07.py  test_lesson_7.py
Home_work/: HW_01.py  HW_02.py  HW_03.py  HW_04.py  HW_05.py  HW_06.py  my_calc.py  test_HW_06.py
RE/: Re_1.py  Re_2.py  Re_5.py
